# Comfy-Cabinet

./: README.md  __init__.py  checkpoint_config_node.py  pyproject.toml
.github/workflows/: publish.yml
web/: index.html  init_dashboard_menu.js
web/assets/css/: style.css
web/assets/js/: dropdown.js  i18n.js
web/assets/js/easy-checkpoint-config/: data_loader.js  settings_manager.js
web/lang/: en.json  it.json
web/tools/easy-checkpoint-config/: index.html  settings.html
