[project]
name = "comfy-cabinet"
version = "0.1.1"
description = "A ComfyUI custom node pack to manage checkpoint presets (steps, CFG, samplers, schedulers, and prompt prefixes/suffixes)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zed93" }
]
dependencies = []

[tool.comfy]
PublisherId = "zed93"
DisplayName = "Comfy Cabinet"
Icon = "🗄️"
