[project]
name = "comfy-cabinet"
version = "0.1.1"
description = "A ComfyUI custom node pack to manage checkpoint presets (steps, CFG, samplers, schedulers, and prompt prefixes/suffixes)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zed93" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/Zed93/Comfy-Cabinet"

[tool.comfy]
PublisherId = "zed93"
DisplayName = "Comfy Cabinet"
Icon = "🗄️"
requires-comfyui = ">=0.2.4"